--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -343,7 +343,7 @@ f.addEventListener('submit', submitted);
 				<!-- end section text -->
 				
 				<p class="section__text section__text--last-with-margin"><span style="color: #00FF00; font-weight: bold;">Terms of Service</p></span>					
-					<p class="section__text section__text--last-with-margin">UsingMxplayer Movies™<br />
+					<a><p class="section__text section__text--last-with-margin">UsingMxplayer Movies™<br />
 					When you enter Mxplayer Movies™ you automatically agree to all our rules and regulations!
 					Hosting and Legal Issues<br />
 					Mxplayer Movies™ is not hosting or uploading any copyrighted content or media of any kind, we only store links to third-party websites that carry their own legal responsibility for their content. If you want to remove content from these websites, please contact these media hosts directly.<br />
