--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<meta name="description" content="Watch Watch Latest Movies and TV-Series Online Free" />
 	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 	<meta name="keywords" content="mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online, hollywood movies, bollywood movies, hindi movies, marathi movies, telugu movies, kannada movies" />
-	<link rel="canonical" href="https://mxplayermovies.netlify.app/">
-	<link rel="next" href="https://mxplayermovies.netlify.app/index2.html/" />
+	<!--<link rel="canonical" href="https://mxplayermovies.netlify.app/">
+	<link rel="next" href="https://mxplayermovies.netlify.app/index2.html/" />-->
 	<meta property="og:locale" content="en_US" />
 	<meta name="robots" content="index, follow">
 	<meta name="revisit-after" content="1 days">
