--- a/an-na-1/index.html
+++ b/an-na-1/index.html
@@ -205,22 +205,24 @@
 			<div class="row">
 				<!-- title -->
 				<div class="col-12">
-					<h1 class="details__title">American Murderer (2022)</h1>
+					<h2 class="details__title"></h2>
 				</div>
 				<!-- end title -->
-			</style>
+				<div class="container">
+					<div class="row">
+						<!-- title -->
+						<div class="col-12">
+							<h3 class="details__title"></h3>
+						</div>
+						<!-- end title -->
 		
 			<div class="container">
 				<div class="row">
 					<!-- title -->
 					<div class="col-12">
-						<h1 class="details__title"></h1>
+						<h4 class="details__title"></h4>
 					</div>
-			
-		
-			<h1 class="details__title"></h1>
-		</div>
-		<!-- end title -->
+					<!-- end title -->
 		<style>
 			.dropbtn {
 			  background-color: #3498DB;
@@ -363,7 +365,7 @@
 						<div class="flowplayer-embed-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width:100%;">
 							<iframe webkitAllowFullScreen mozallowfullscreen allowfullscreen src="https://sblongvu.com/e/y3pfaqm2zggc.html" title="An Na S01E03 (2022)" byline="0" portrait="0" frameborder="1" allow="autoplay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
 							</div>
-						</div></div></div>
+						</div></div></div></div>
 					
 						<div class="col-12 col-xl-6">
 							<center>
