--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
 	<meta name="keywords" content="mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online, hollywood movies, bollywood movies, hindi movies, marathi movies, telugu movies, kannada movies" />
 	<!--<link rel="canonical" href="https://mxplayermovies.netlify.app/">
 	<link rel="next" href="https://mxplayermovies.netlify.app/index2.html/" />-->
+	<link rel="canonical" href="/about/" />
 	<meta property="og:locale" content="en_US" />
 	<meta name="robots" content="index, follow">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
