--- a/hollywood.html
+++ b/hollywood.html
@@ -32,6 +32,7 @@
 	<meta name="keywords" content="mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online, hollywood movies, bollywood movies, hindi movies, marathi movies, telugu movies, kannada movies" />
 	<!--<link rel="canonical" href="https://mxplayermovies.netlify.app/">
 	<link rel="next" href="https://mxplayermovies.netlify.app/index2.html/" />-->
+	<link rel="canonical" href="/hollywood/" />
 	<meta property="og:locale" content="en_US" />
 	<meta name="robots" content="index, follow">
 	<meta name="revisit-after" content="1 days">
