--- a/an-na-1/index.html
+++ b/an-na-1/index.html
@@ -46,7 +46,7 @@
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 <meta name="keywords" content="an na movie,an na movie (2022),mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online,hollywood movies,bollywood movies, hindi movies,marathi movies,telugu movies,kannada movies,an na movie online,watch an na movie ,watch an na movie online,an na movie download,an na movie 2022,an na movie watch online,an na movie latest, an na movie  videos,an na movie trailer,an na movie cast,an na movie story,an na movie release date,an na movie in hindi,an na movie mx player,an na movie watch online free,an na movie free download,an na movie download,an na movie online watch,mx player an na movie,an na movie online free,an na movie cast,index of an na movie,an na movie cast name,an na movie star cast" />
 
-
+<link rel="canonical" href="/an-na-1/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="Mxplayer Movies™ | Watch Movies and TV-Series Online Free" />
 <meta property="og:type" content="movie" />
