--- a/breathe-Into-the-shadows/index.html
+++ b/breathe-Into-the-shadows/index.html
@@ -45,7 +45,7 @@
 	<title>Watch Breathe Into the Shadows (2022) Full Movie Online Free | Mxplayer Movies™</title>
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 <meta name="keywords" content="breathe Into the shadows movie,breathe Into the shadows movie (2022),mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online,hollywood movies,bollywood movies, hindi movies,marathi movies,telugu movies,kannada movies,breathe Into the shadows movie online,watch breathe Into the shadows movie ,watch breathe Into the shadows  movie online,breathe Into the shadows movie download,breathe Into the shadows movie 2022,breathe Into the shadows movie watch online,breathe Into the shadows movie latest, breathe Into the shadows movie  videos,breathe Into the shadows movie trailer,breathe Into the shadows movie cast,breathe Into the shadows movie story,breathe Into the shadows movie release date,breathe Into the shadows movie in hindi,breathe Into the shadows movie mx player,breathe Into the shadows movie watch online free,breathe Into the shadows movie free download,breathe Into the shadows movie download,breathe Into the shadows  movie online watch,mx player breathe Into the shadows movie,breathe Into the shadows movie online free,breathe Into the shadows movie cast,index of breathe Into the shadows movie,breathe Into the shadows movie cast name,breathe Into the shadows movie star cast" />
-<link rel="canonical" href="breathe-Into-the-shadows/index.html/" />
+<link rel="canonical" href="/breathe-Into-the-shadows/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="Mxplayer Movies™ | Watch Movies and TV-Series Online Free" />
 <meta property="og:type" content="movie" />
@@ -192,19 +192,22 @@
 		<div class="row">
 			<!-- title -->
 			<div class="col-12">
-				<h1 class="details__title">American Murderer (2022)</h1>
+				<h2 class="details__title"></h2>
 			</div>
 			<!-- end title -->
-		</style>
+			<div class="container">
+				<div class="row">
+					<!-- title -->
+					<div class="col-12">
+						<h3 class="details__title"></h3>
+					</div>
+					<!-- end title -->
 	
 		<div class="container">
 			<div class="row">
 				<!-- title -->
 				<div class="col-12">
-					<h1 class="details__title"></h1>
-				</div>
-				<!-- end title -->
-				<h1 class="details__title"></h1>
+					<h4 class="details__title"></h4>
 				</div>
 				<!-- end title -->
 				<style>
@@ -348,7 +351,7 @@
 						<div class="flowplayer-embed-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width:100%;">
 							<iframe webkitAllowFullScreen mozallowfullscreen allowfullscreen src="https://sblongvu.com/e/a9la9h0quuvr.html" title="0" byline="0" portrait="0" frameborder="1" allow="autoplay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
 							</div>
-						</div></div></div>
+						</div></div></div></div>
 						<div class="col-12 col-xl-6">
 							<center>
 								<style type="text/css">
