--- a/judaa-hoke-bhi/index.html
+++ b/judaa-hoke-bhi/index.html
@@ -45,7 +45,7 @@
 	<title>Watch Judaa Hoke Bhi (2022) Full Movie Online Free | Mxplayer Movies™</title>
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 <meta name="keywords" content="judaa hoke bhi movie,judaa hoke bhi movie (2022),mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online,hollywood movies,bollywood movies, hindi movies,marathi movies,telugu movies,kannada movies,judaa hoke bhi movie online,watch judaa hoke bhi movie ,watch judaa hoke bhi  movie online,judaa hoke bhi movie download,judaa hoke bhi movie 2022,judaa hoke bhi movie watch online,judaa hoke bhi movie latest, judaa hoke bhi movie  videos,judaa hoke bhi movie trailer,judaa hoke bhi movie cast,judaa hoke bhi movie story,judaa hoke bhi movie release date,judaa hoke bhi movie in hindi,judaa hoke bhi movie mx player,judaa hoke bhi movie watch online free,judaa hoke bhi movie free download,judaa hoke bhi movie download,judaa hoke bhi  movie online watch,mx player judaa hoke bhi movie,judaa hoke bhi movie online free,judaa hoke bhi movie cast,index of judaa hoke bhi movie,judaa hoke bhi movie cast name,judaa hoke bhi movie star cast" />
-<link rel="canonical" href="/judaa-hoke-bhi/index.html/" />
+<link rel="canonical" href="/judaa-hoke-bhi/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="Mxplayer Movies™ | Watch Movies and TV-Series Online Free" />
 <meta property="og:type" content="movie" />
