--- a/tv-series.html
+++ b/tv-series.html
@@ -1225,7 +1225,7 @@ box-shadow: 0px 0px 15px 5px #e1edf2;
 				<div class="col-6 col-sm-4 col-lg-3 col-xl-2">
 					<div class="card">
 						<div class="card__cover">
-							<a href="vijayanand"><img src="img/12/vijayanand-2022.webp" alt="Vijayanand (2022)"></a>
+							<a href="vijayanand"><img src="img/12/vijayanand-2022.webp" alt="Vijayanand (2022)" type="image/webp"></a>
 							<a href="vijayanand" class="card__play">
 								<i class="icon ion-ios-play"></i>
 							</a><p></p>
