--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@ f.addEventListener('submit', submitted);
 				<div class="col-6 col-sm-4 col-lg-3 col-xl-2">
 					<div class="card">
 						<div class="card__cover">
-							<a href="against-the-ice/index.html"><img src="img/12/against-the-ice-2022.webp" alt="Against The Ice (2022)"></a>
-							<a href="against-the-ice/index.html" class="card__play">
+							<a href="against-the-ice/"><img src="img/12/against-the-ice-2022.webp" alt="Against The Ice (2022)"></a>
+							<a href="against-the-ice/" class="card__play">
 								<i class="icon ion-ios-play"></i>
 							</a><p></p>
 							<style type="text/css">  
@@ -454,10 +454,10 @@ f.addEventListener('submit', submitted);
 								   </marquee></a></h2> 
 						</div>
 						<div class="card__content">
-							<h3 class="card__title"><a href="against-the-ice/index.html">Against The Ice (2022)</a></h3>
+							<h3 class="card__title"><a href="against-the-ice/">Against The Ice (2022)</a></h3>
 							<span class="card__category">
-								<a href="against-the-ice/index.html">Drama</a>
-								<a href="against-the-ice/index.html">Adventure</a>
+								<a href="against-the-ice/">Drama</a>
+								<a href="against-the-ice/">Adventure</a>
 								
 							</span>
 							<span class="card__rate"><i class="icon ion-ios-star"></i>3.6</span>
