--- a/bollywood.html
+++ b/bollywood.html
@@ -8,7 +8,7 @@
 	<meta name="google-site-verification" content="WQh7UdOVLh--PluVaU8U1m1IHrAPjaWmaItVOdek8tg" />
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" rel="stylesheet">
-
+	<meta name="yandex-verification" content="7f32779a058eca0d" />
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -26,32 +26,35 @@
 	<link rel="icon" href="icon/favicon-32x32.png">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="mask-icon" href="https://mxplayermovies.netlify.app/safari-pinned-tab.svg" color="#40d7bc">
-	<title>Mxplayer Movies™ – Watch Latest Movies and TV-Series Online Free </title>
-	<meta name="description" content="Watch Watch Latest Movies and TV-Series Online Free" />
-	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-	<meta name="keywords" content="mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online, hollywood movies, bollywood movies, hindi movies, marathi movies, telugu movies, kannada movies" />
 
-	<meta property="og:locale" content="en_US" />
-	<meta name="robots" content="index, follow">
+	<title>Mxplayer Movies™ – Watch now the Best TV shows and Movies  </title>
+	<meta name="description" content="Watch Watch now the Best TV shows and Movies " />
+	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+	<meta name="keywords" content="mxplayermovies,streaming,latest movies,online tv,latest free movies,watch latest movies online,latest full movies online" />
 	<meta name="revisit-after" content="1 days">
+	<meta property="og:locale" content="en_US" />
+	<!--<meta name="robots" content="index, follow">-->
+	<meta name="robots" content="index, follow, archive">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="https://mxplayermovies.netlify.app/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://mxplayermovies.netlify.app/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://mxplayermovies.netlify.app/favicon-16x16.png">
 <link rel="mask-icon" href="https://mxplayermovies.netlify.app/safari-pinned-tab.svg" color="#40d7bc">
-	<meta property="og:site_name" content="Mxplayer Movies™ | Watch Latest Movies and TV-Series Online Free" />
+	<meta property="og:site_name" content="Mxplayer Movies™ | Watch now the Best TV shows and Movies " />
 	<meta property="og:type" content="website" />
 	<meta property="og:image:height" content="1000"/>
 	<meta property="og:image:width" content="1000"/>
-	<meta property="og:title" content="Mxplayer Movies™ | Watch Latest Movies and TV-Series Online Free" />
-	<meta property="og:description" content="Watch Latest Movies and TV-Series Online Free" />
-	<meta property="og:url" content="https://mxplayermovies.netlify.app/" />
+	<meta property="og:title" content="Mxplayer Movies™ | Watch now the Best TV shows and Movies " />
+	<meta property="og:description" content="Watch now the Best TV shows and Movies " />
+	<meta property="og:url" content="https://mxplayermovies.netlify.app/index.html" />
+	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image" content="https://mxplayermovies.netlify.app/og_image.jpg" />
 	<meta property="og:image:secure_url" content="https://mxplayermovies.netlify.app/og_image.jpg" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Mxplayer Movies™ | Watch Latest Movies and TV-Series Online Free" />
-	<meta name="twitter:description" content=" Watch Latest Movies and TV-Series Online Free" />
+	<meta name="twitter:title" content="Mxplayer Movies™ " />
+	<meta name="twitter:description" content=" Watch now the Best TV shows and Movies " />
 	<meta name="twitter:image" content="https://mxplayermovies.netlify.app/og_image.jpg" />
+
 
 	<link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css”>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://mxplayermovies.netlify.app/apple-touch-icon.png">
@@ -70,23 +73,23 @@
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5581590,document.body||document.documentElement)</script>
 
 <link rel="alternate" hreflang="en-us" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-gb" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-ca" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-au" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-se" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-fr" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-dk" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="en-no" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 <link rel="alternate" hreflang="x-default" 
-href="https://uwatchfree.vercel.app/"/>
+href="https://mxplayermovies.netlify.app/"/>
 
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com/">
 	<link rel="dns-prefetch" href="https://fonts.googleapis.com/">
